--- a/stylesheets/pages/_skills.scss
+++ b/stylesheets/pages/_skills.scss
@@ -2,13 +2,14 @@
 @import '../components/animation';
 @import '../components/mixins';
 
-
-.skill-text {
+// Skills section wrapper
+.skill-section {
   @include flex-center;
   flex-flow: row wrap;
   width: 100%;
   gap: 0.5em;
   padding-bottom: 115px;
+  // Skill card wrapper
   .skill-container {
     opacity: 0;
     max-width: 350px;
@@ -18,15 +19,18 @@
     background-color: rgba(221, 97, 74, 0.25);
     padding: 10px;
     width: 100%;
+    // Skill card
     .skill-content {
       @include flex-center;
       width: 100%;
       color: $layer-5;
+      // Title
       h2 {
         font-size: 1.3em;
         align-self: flex-start;
         padding-bottom: 5px;
       }
+      // Tech icons
       .skill-icons {
         align-self: flex-end;
         a {
@@ -38,6 +42,8 @@
       }
     }
   }
+
+  // Skill card transitions
   .skill-container:nth-child(1) {
     animation: fade-up 700ms forwards 300ms ease-in-out;
   }
@@ -51,3 +57,5 @@
     animation: fade-up 700ms forwards 900ms ease-in-out;
   }
 }
+
+// No need for media querries as cards are responsive and look good on the page
